--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -2,3 +2,84 @@
     width:50%;
     text-align:center;
     margin:0 auto
+
+ul,li
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+.zi
+    text-decoration:none;
+.zi:hover
+    text-decoration:none;
+.time
+    display:inline-block;
+    font-size: 18px;
+    font-weight: normal;
+    letter-spacing: .19px;
+    text-transform: uppercase;
+    vertical-align: middle;
+    text-align:center;
+    margin-bottom:10px;
+    width:100%;
+    color:#2c76d1;
+    color:-moz-linear-gradient(left,#2c76d1 31%,#1442a5 100%);
+    color:-webkit-linear-gradient(left,#2c76d1 31%,#1442a5 100%);
+    color:linear-gradient(to right,#2c76d1 31%,#1442a5 100%);
+
+.cnt_dwn-ul 
+    margin:0 auto;
+    margin-bottom: 15px;
+    text-align:center;
+    font-size: 0;
+
+    .cnt_dwn-li 
+        display: inline-block;
+        vertical-align: middle;
+        padding: 10px 12px;
+        position: relative;
+        .cnt_dwn-vlu 
+            border-radius: 8px;
+            font-size: 15px;
+            font-weight: bold;
+            margin: auto;
+            text-align: center;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            padding:2px;
+            display: block;
+            color: #fff;
+            background: #2c76d1;
+            background: -moz-linear-gradient(left,#2c76d1 31%,#1442a5 100%);
+            background: -webkit-linear-gradient(left,#2c76d1 31%,#1442a5 100%);
+            background: linear-gradient(to right,#2c76d1 31%,#1442a5 100%);
+        .cnt_dwn-lbl 
+            font-size: 15px;
+
+    .cnt_dwn-li:after 
+        color: #333;
+        content: ':';
+        display: block;
+        font-size: 24px;
+        position: absolute;
+        right: 0;
+        top: 0;
+    .cnt_dwn-li:last-child:after{
+        content:''
+    }
+
+.showWei
+    width:30%
+    display:inline-block
+    margin:10px 0 0 0;
+    .title
+        text-align:center;
+        width:200px;
+    img
+        text-align:center;
+
+    .zhi
+        color:#019FE8
+    .wei
+        color:#12C704
