--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -83,3 +83,12 @@ ul,li
         color:#019FE8
     .wei
         color:#12C704
+
+
+.wuhan 
+    padding-left:0
+
+    div
+        width:150px;
+        display:inline-block
+        font-weight:bold
