修改友链样式

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -38,6 +38,7 @@ ul,li
         vertical-align: middle;
         padding: 10px 12px;
         position: relative;
+        width: 55px;
         .cnt_dwn-vlu 
             border-radius: 8px;
             font-size: 15px;
