增加即时通话

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -108,3 +108,19 @@ ul,li
     color transparentify($textColor, 0.4)
     font-size 0.9rem
     text-align right
+
+
+.crisp-client #crisp-chatbox>div>a>span:last-child {
+    width: 40px!important;
+    height: 40px!important;
+    border-radius: 50%!important;
+    box-shadow: 0 3px 12px #9764eb!important;
+    background-color: #9a69ec!important;
+}
+
+.crisp-client #crisp-chatbox>div>a>span:last-child>span>span {
+    width: 20px!important;
+    height: 20px!important;
+    top: 10px!important;
+    left: 10px!important;
+}
