--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -114,8 +114,8 @@ ul,li
     width: 40px!important;
     height: 40px!important;
     border-radius: 50%!important;
-    box-shadow: 0 3px 12px #9764eb!important;
-    background-color: #9a69ec!important;
+    box-shadow: 0 3px 12px #B9C3D2!important;
+    background-color: #355275!important;
 }
 
 .crisp-client #crisp-chatbox>div>a>span:last-child>span>span {
