更改目录结构

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -101,10 +101,20 @@ ul,li
   margin 1rem 0
   padding .1rem 1.5rem
   border-radius 0.4rem
+  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
   background:linear-gradient(to right, #bb313e25, #bb313e25, #d7222925, #dd4a1625, #e4761525, #f5c50025, #f0e92725, #b1ce2425, #48a93525, #03944525, #157c4f25, #176a5825, #1b556325, #1d386f25, #1d386f25, #20277825, #52266325, #8a244b25);
   .title
     font-weight bold
     color:#8492a6
+.prompt
+  margin 1rem 0
+  padding .1rem 1.5rem
+  border-radius 0.4rem
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+  .title
+    font-weight bold
+    color:#000
+
 
 .custom-block
   &.right
@@ -137,4 +147,9 @@ ul,li
             z-index:10000
         }
     }
+}
+
+red{
+    color: red;
+    font-weight: bold
 }
