--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,1 +1,4 @@
-$accentColor = #2c3e50;                      // 主题颜色
+$accentColor = #2c3e50;                        // 主题颜色
+.color-picker{
+    display:none
+}
